kubernetes/apps/base/forgejo/forgejo/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: forgejo-cdn
  namespace: forgejo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: keiretsu-top
  to:
    - group: ""
      kind: Service
      name: forgejo-http
